package com.bankapp;

public class Deposit {



    public void depositAmount(Account account, double amount){

    }


    /*Vi skal tilføje noget her, men har bare commentert det ud for nu
    public Transactions createDepositTransaction(Account account, double amount){

    }
    */


    public boolean validateAmount(double amount){
        return true; //Vi skal tilføje noget her, men har bare lagt en placeholder for nu
    }


}
