package com.bankapp;

import java.util.Scanner;

public class UIText {
// Lav UIText som niget af det første i stedet for sout
}
