package com.bankapp;

public class Withdraw {

    public boolean withdrawAmount(Account account, double amount){
        return true; //Vi skal tilføje noget her, men har bare lagt en placeholder for nu
    }



    /*Vi skal tilføje noget her, men har bare commentert det ud for nu
    public Transactions createWithdrawTransaction(Account account, double amount){

    }
    */

    public boolean validateWithdrawal(Account account, double amount){
        return true; //Vi skal tilføje noget her, men har bare lagt en placeholder for nu

    }


}
