@startuml

skinparam classAttributeIconSize 12


title MobilBank AMEK UML 1

' ---------- MAIN ----------
class Main {
    + main(args : String[]) : void
}

' ---------- BANKMENU ----------
class BankMenu {
    + UIText ui
    + DBconnection db
    + User loggedInUser
    - Arraylist menuOptions
    + void start()
    + void login()
    + void logout()
    + void showMainMenu()
    + void chooseFromMenu()
    + void handleDeposit()
    + void handleWithdraw()
    + void showBalance()
    + void showTransactions()
}

' ---------- DOMAIN ----------
class User {
    - int userId
    - String username
    - String firstName
    - String lastName
    - String userEmail
    - String password
    - List<Account> accounts
    + boolean checkPassword(String password)
    + void addAccount(Account account)
}

class Account {
    - int accountId
    - double balance
    - String accountType
    - User owner
    - List<Transactions> transactions


    + double getBalance()
    + List<Transactions> getTransactions()
    + void deposit(double amount)
    + boolean withdraw(double amount)
    + boolean canAfford(double amount)
    + void addTransaction(Transactions t)
    + void printTransactions()
}

class Transactions {
    - int id
    - LocalDateTime date
    - String type
    - double amount
    - Account fromAccount
    - Account toAccount

    + String getSummary()
}

' ---------- SERVICES ----------
class Deposit {
    + void depositAmount(Account account, double amount)
    + Transactions createDepositTransaction(Account account, double amount)
    + boolean validateAmount(double amount)
}

class Withdraw {
    + boolean withdrawAmount(Account account, double amount)
    + Transactions createWithdrawTransaction(Account account, double amount)
    + boolean validateWithdrawal(Account account, double amount)
}

class Saldo {
    + double getBalance(Account account)
    + void printBalance(Account account, UIText ui)
    + String formatBalance(double value)
}

' ---------- UTIL ----------
package UTIL {
    class DBconnection {
        +void createBankAccountInformation(User user)
        +void userInformation()
        +userLoginInformation()
    }

    class UIText {
        + void displayMsg(String msg)
        + void displayError(String msg)
        + String promptTxt(String prompt)
        + double promptNumeric(String prompt)
        + int displayMenu(String title, java.util.List<String> options)
    }
}

' ---------- RELATIONER ----------
Main o-- BankMenu

BankMenu o-- User
User o-- Account
Account o-- Transactions

BankMenu o-- Deposit
BankMenu o-- Withdraw
BankMenu o-- Saldo

BankMenu o-- DBconnection
BankMenu o-- UIText

@enduml
